split project to modules added future_events module added core module renamed screens directories to snake_case deleted test samples added dependency analyzer removed unused dependencies refactor type selector widget update README.md