@@ -4,6 +4,7 @@ plugins {
     alias(libs.plugins.kotlin.compose)
     alias(libs.plugins.ksp)
     alias(libs.plugins.kotlin.serialization)
+    alias(libs.plugins.dependency.analysis)
 }
 
 android {
@@ -57,59 +58,34 @@ android {
     buildFeatures {
         compose = true
     }
-
-    testOptions {
-        unitTests.all {
-            it.jvmArgs = listOf("-XX:+EnableDynamicAgentLoading")
-        }
-    }
 }
 
 
 
 dependencies {
     // Core
-    implementation(libs.androidx.core.ktx)
-    implementation(libs.androidx.lifecycle.runtime.ktx)
     implementation(libs.androidx.activity.compose)
     implementation(platform(libs.androidx.compose.bom))
     implementation(libs.androidx.ui)
-    implementation(libs.androidx.ui.graphics)
-    implementation(libs.androidx.ui.tooling.preview)
-    implementation(libs.androidx.material3)
-    implementation(libs.androidx.material.icons.extended)
     // Navigation
     implementation(libs.androidx.navigation.compose)
     // KoinDI
     implementation(libs.koin.core)
     implementation(libs.koin.android)
-    implementation(libs.koin.androidx.compose)
-    testImplementation(libs.koin.test)
-    // Retrofit
-    implementation(libs.retrofit)
-    implementation(libs.retrofit.kotlinx.serialization)
     // JSON
     implementation(libs.kotlinx.serialization.json)
     // Room
-    implementation(libs.room.runtime)
-    implementation(libs.room.ktx)
+    runtimeOnly(libs.room.runtime)
     ksp(libs.room.compiler)
-    // DataStore
-    implementation(libs.androidx.datastore.preferences)
-    implementation(libs.androidx.datastore.preferences.core)
     // Location Google Play Services
     implementation(libs.play.services.location)
-    implementation(libs.kotlinx.coroutines.play.services)
-    // Permission Manager
-    implementation(libs.accompanist.permissions)
     // Tests
-    testImplementation(libs.junit)
     testImplementation(libs.mockk)
     testImplementation(libs.kotlinx.coroutines.test)
-    androidTestImplementation(libs.androidx.junit)
-    androidTestImplementation(libs.androidx.espresso.core)
     androidTestImplementation(platform(libs.androidx.compose.bom))
-    androidTestImplementation(libs.androidx.ui.test.junit4)
     debugImplementation(libs.androidx.ui.tooling)
-    debugImplementation(libs.androidx.ui.test.manifest)
+    debugRuntimeOnly(libs.androidx.ui.test.manifest)
+    //modules
+    implementation(project(":core"))
+    implementation(project(":feature_events"))
 }
